--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,18 +8,12 @@
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="<%= SWICO_ENV==='prod'? SWICO_PUBLIC_PATH:'/' %>favicon.ico" />
     <Title>Swico App</Title>
-    <script>
-      // swico配置文件中router->base配置项
-      window.SWICO_ROUTER_BASE = '<%= routerBase %>'
-      // swico配置文件中publicPath配置项
-      window.SWICO_PUBLIC_PATH = '<%= publicPath %>'
-    </script>
 </head>
 <body>
 <!--切勿删除此元素节点-->
-<div id="root">
+<div id="swico-root">
     <!-- 页面在这里渲染    -->
 </div>
 
