--- a/src/global.css
+++ b/src/global.css
@@ -4,11 +4,17 @@
     box-sizing: border-box;
 }
 :root {
-    --theme-color: #1890ff;
+    --autumn-yellow: #ffb66a;
+    --autumn-red: #ff6b6b;
+    --autumn-brown: #8b4513;
+    --leaf-green: #8fbc8f;
+    --cream: #fff8dc;
+    --light-orange: #ffdab9;
 }
 
 body {
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .mb {
@@ -62,26 +68,6 @@ body {
     filter: grayscale(100%);
     pointer-events: none;
 }
-.gray {
-    color: #999999;
-}
-
-.red {
-    color: #fb2828;
-}
-.blue {
-    color: var(--theme-color);
-}
-.green {
-    color: #48c35e;
-}
-.orange {
-    color: #eaa932;
-}
-.link-style {
-    color: #1890ff;
-    cursor: pointer;
-}
 
 .cp {
     cursor: pointer;
@@ -93,4 +79,12 @@ body {
 }
 .pe-all {
     pointer-events: all;
+}
+[class^='icon-'],
+[class*=' icon-'] {
+    width: 20px;
+    height: 20px;
+    margin: 0 4px;
+    display: inline-block;
+    vertical-align: -4px;
 }
