--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,7 +9,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="shortcut icon" href="<%= SWICO_ENV==='prod'? SWICO_PUBLIC_PATH:'/' %>favicon.ico" />
-    <Title>Swico App</Title>
+    <Title>我在呢，一直都在呢</Title>
 </head>
 <body>
     <!-- 页面在这里渲染    -->
