--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,13 +1,12 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8"/>
     <meta
             name="viewport"
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="shortcut icon" href="<%= SWICO_ENV==='prod'? SWICO_PUBLIC_PATH:'/' %>favicon.ico" />
     <Title>我在呢，一直都在呢</Title>
 </head>
