--- a/src/global.css
+++ b/src/global.css
@@ -21,10 +21,16 @@ html {
     /*这里本应该写 100vw/750px 即750设计稿条件下某元素尺寸是a px，则css代码依然写a px，最终转换成a rem。
     但由于px2rem插件中配置的rootValue为100，即最终转换成0.0a rem（也是为了兼容iphone），所以相应的也要改成100vw/ 7.5 */
 }
-@media (min-width: 768px) {
+@media (min-width: 900px) {
     /*设置上限值，兼容pc端显示效果*/
     html {
-        font-size: 102px !important;
+        font-size: 120px !important;
+    }
+}
+@media (max-width: 360px) {
+    /*设置上限值，兼容pc端显示效果*/
+    html {
+        font-size: 50px !important;
     }
 }
 body {
