--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,7 +7,7 @@
             name="viewport"
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="shortcut icon" href="<%= SWICO_ENV==='prod'? SWICO_PUBLIC_PATH:'/' %>favicon.ico" />
+    <link rel="shortcut icon" href="<%= SWICO_STATIC_PUBLIC_PATH%>favicon.ico" />
     <Title>我在呢，一直都在呢</Title>
 </head>
 <body>
