add: 更新上传图片

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta
             name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,viewport-fit=cover"
     />
     <link rel="shortcut icon" href="<%= SWICO_STATIC_PUBLIC_PATH%>favicon.ico" />
     <Title>我在呢，一直都在呢</Title>
